--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -48,28 +48,28 @@
             <table class="table table-bordered table-striped table-responsive">
               <thead>
                 <tr>
-                  <td>
+                  <td class="fit">
                     <a href="#" ng-click="sortType = 'batter'; sortReverse = !sortReverse">
                       Batter 
                       <span ng-show="sortType == 'batter' && !sortReverse" class="fa fa-caret-down"></span>
                       <span ng-show="sortType == 'batter' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                   </td>
-                  <td>
+                  <td class="fit">
                     <a href="#" ng-click="sortType = 'against'; sortReverse = !sortReverse">
                       Against 
                       <span ng-show="sortType == 'against' && !sortReverse" class="fa fa-caret-down"></span>
                       <span ng-show="sortType == 'against' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                   </td>
-                  <td>
+                  <td class="fit">
                     <a href="#" ng-click="sortType = 'batter_avg_fant'; sortReverse = !sortReverse">
                       Avg Fantasy 
                       <span ng-show="sortType == 'batter_avg_fant' && !sortReverse" class="fa fa-caret-down"></span>
                       <span ng-show="sortType == 'batter_avg_fant' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                   </td>
-                  <td>
+                  <td class="fit">
                     <a href="#" ng-click="sortType = 'prob_fant_abov_avg'; sortReverse = !sortReverse">
                       Prob. Fantasy Above Avg 
                       <span ng-show="sortType == 'prob_fant_abov_avg' && !sortReverse" class="fa fa-caret-down"></span>
