when data is not ready

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -10,10 +10,10 @@
       <div class="col-md-6">
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" href="#woba_data_tbl" role="tab" data-toggle="tab">Woba Data</a>
+            <a class="nav-link active" href="#woba_data_tbl" role="tab" data-toggle="tab">Fantasty</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#fant_data" role="tab" data-toggle="tab">Fantasy Data</a>
+            <a class="nav-link active" href="#fant_data" role="tab" data-toggle="tab">Woba</a>
           </li>
          
         </ul>
@@ -36,7 +36,8 @@
         <div class="row container-fluid">
           <!-- Start Document Results Tree -->
           <div class="col-md-3">
-            <h3>Woba Data</h3>
+            <h2>Fantasty Data</h2>
+            <h3> {{ "{{fant_missing_data}}" }}</h3>
             <form>
               <div class="form-group">
                 <div class="input-group">
@@ -94,7 +95,7 @@
         <div class="row container-fluid">
           <!-- Start Document Results Tree -->
           <div class="col-md-3">
-            <h3>Fantasy Data</h3>
+            <h3>Woba Data</h3>
             <form>
               <div class="form-group">
                 <div class="input-group">
