--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -188,10 +188,10 @@
                     </a>
                   </td>
                   <td class="fit">
-                    <a href="#" ng-click="sortType = 'pwabh'; sortReverse = !sortReverse">
-                      Pichter Woba Against B Hand 
-                      <span ng-show="sortType == 'pwabh' && !sortReverse" class="fa fa-caret-down"></span>
-                      <span ng-show="sortType == 'pwabh' && sortReverse" class="fa fa-caret-up"></span>
+                    <a href="#" ng-click="sortType = 'salary_over_k'; sortReverse = !sortReverse">
+                      $ / k's 
+                      <span ng-show="sortType == 'salary_over_k' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'salary_over_k' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                   </td>
                   <td class="fit">
@@ -216,7 +216,7 @@
                   <td class="fit">{{ "{{row.pitcher}}" }}</td>
                   <td class="fit">{{ "{{row.p_hand}}" }}</td>
                   <td class="fit">{{ "{{row.pitcher_salary | number:0 }}" }}</td>
-                  <td class="fit">{{ "{{ row.pwabh | number:2 }}" }}</td>
+                  <td class="fit">{{ "{{ row.salary_over_k | number:2 }}" }}</td>
                   <td class="fit">{{ "{{ row.total_woba| number:2 }}" }}</td>
               </tbody>
             </table>
