--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -103,7 +103,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-addon"><i class="fa fa-search"></i></div>
-                  <input type="text" class="form-control" placeholder="Filter table" ng-model="search_table">
+                  <input type="text" class="form-control" placeholder="Filter table" ng-model="search_fant_table">
                 </div>      
               </div>
             </form>
