--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -195,6 +195,13 @@
                     </a>
                   </td>
                   <td class="fit">
+                    <a href="#" ng-click="sortType = 'pwaph'; sortReverse = !sortReverse">
+                      Pitcher Woba Against B Hand 
+                      <span ng-show="sortType == 'pwaph' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'pwaph' && sortReverse" class="fa fa-caret-up"></span>
+                    </a>
+                  </td>
+                  <td class="fit">
                     <a href="#" ng-click="sortType = 'pitcher_salary'; sortReverse = !sortReverse; debug()">
                       Pitcher Salary 
                       <span ng-show="sortType == 'pitcher_salary' && !sortReverse" class="fa fa-caret-down"></span>
@@ -231,6 +238,7 @@
                   <td class="fit">{{ "{{row.p_tot_woba | number:2 }}" }}</td>
                   <td class="fit">{{ "{{row.pitcher}}" }}</td>
                   <td class="fit">{{ "{{row.p_hand}}" }}</td>
+                  <td class="fit">{{ "{{row.pwaph | number:2 }}" }}</td>
                   <td class="fit">{{ "{{row.pitcher_salary | number:0 }}" }}</td>
                   <td class="fit">{{ "{{ row.salary_over_k | number:2 }}" }}</td>
                   <td class="fit">{{ "{{ row.total_woba| number:2 }}" }}</td>
