add lineup status

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -195,10 +195,10 @@
                     </a>
                   </td>
                   <td class="fit">
-                    <a href="#" ng-click="sortType = 'pwaph'; sortReverse = !sortReverse">
+                    <a href="#" ng-click="sortType = 'pwabh'; sortReverse = !sortReverse">
                       Pitcher Woba Against B Hand 
-                      <span ng-show="sortType == 'pwaph' && !sortReverse" class="fa fa-caret-down"></span>
-                      <span ng-show="sortType == 'pwaph' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType == 'pwabh' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'pwabh' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                   </td>
                   <td class="fit">
@@ -238,7 +238,7 @@
                   <td class="fit">{{ "{{row.p_tot_woba | number:2 }}" }}</td>
                   <td class="fit">{{ "{{row.pitcher}}" }}</td>
                   <td class="fit">{{ "{{row.p_hand}}" }}</td>
-                  <td class="fit">{{ "{{row.pwaph | number:2 }}" }}</td>
+                  <td class="fit">{{ "{{row.pwabh | number:2 }}" }}</td>
                   <td class="fit">{{ "{{row.pitcher_salary | number:0 }}" }}</td>
                   <td class="fit">{{ "{{ row.salary_over_k | number:2 }}" }}</td>
                   <td class="fit">{{ "{{ row.total_woba| number:2 }}" }}</td>
