add lineup status

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en-US">
-<title>Murphvy Shit</title>
+<title>Murphvy</title>
 
 <head>
 <meta charset="utf-8">
@@ -32,7 +32,7 @@
 <script type="text/javascript" src="static/js/app.module.js"></script>
 <script type="text/javascript" src="static/js/controller.js"></script>
 <script type="text/javascript" src="static/js/directive.js"></script>
-<!-- <script type="text/javascript" src="/static/js/service.js"></script> -->
+
 
 <style>
 .table td.fit, 
