add cols and styling

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,12 @@
     white-space: nowrap;
     width: 1%;
 }
+.bottom-column
+{
+    float: none;
+    display: table-cell;
+    vertical-align: bottom;
+}
 </style>
 </head>
 {% block body %}{% endblock %}
