--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,8 @@
 <link href="static/css/bootstrap.min.css" rel="stylesheet">
 <link href="static/css/jquery-ui.theme.min.css" rel="stylesheet">
 <link href="static/css/jquery-ui.structure.min.css" rel="stylesheet">
-
+<link href="static/css/bootstrap-datepicker.standalone.css" rel="stylesheet">
+<link href="static/css/bootstrap-datepicker3.css" rel="stylesheet">
 <link rel="stylesheet" href="static/css/angular-material.css">
 <link rel="stylesheet" href="static/css/bootstrap-theme.css">
 
@@ -22,7 +23,7 @@
 <script type="text/javascript" src="static/js/jquery.min.js"></script>
 <script type="text/javascript" src="static/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="static/js/datetime.js"></script>
+<script type="text/javascript" src="static/js/bootstrap-datepicker.min.js"></script>
 
 <script src="static/js/angular.min.js"></script>
 <script src="static/js/angular-animate.min.js"></script>
