--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,33 +6,21 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-<!-- CSS -->
-<link rel="stylesheet" type="text/css" href="static/css/jquery.dataTables.min.css" />
+<!-- css Libraries -->
 <link href="static/css/bootstrap.min.css" rel="stylesheet">
-<link href="static/css/jquery-ui.theme.min.css" rel="stylesheet">
-<link href="static/css/jquery-ui.structure.min.css" rel="stylesheet">
 <link href="static/css/bootstrap-datepicker.standalone.css" rel="stylesheet">
 <link href="static/css/bootstrap-datepicker3.css" rel="stylesheet">
-<link rel="stylesheet" href="static/css/angular-material.css">
 <link rel="stylesheet" href="static/css/bootstrap-theme.css">
 
 
 
 <!-- JS Libraries -->
 <script type="text/javascript" src="static/js/jquery.min.js"></script>
-<script type="text/javascript" src="static/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="static/js/bootstrap-datepicker.min.js"></script>
-
 <script src="static/js/angular.min.js"></script>
-<script src="static/js/angular-animate.min.js"></script>
-<script src="static/js/angular-aria.min.js"></script>
-<script src="static/js/angular-material.min.js"></script>
-<!-- AngularJS -->    
-<script type="text/javascript" src="static/js/app.module.js"></script>
 <script type="text/javascript" src="static/js/controller.js"></script>
-<script type="text/javascript" src="static/js/directive.js"></script>
+
 
 
 <style>
